k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rails-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rails-app
  template:
    metadata:
      labels:
        app: rails-app
    spec:
      containers:
      - name: web
        image: itssam509/my-rails-app:v0.1
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: sqlite-storage
          mountPath: /app/db
      volumes:
      - name: sqlite-storage
        persistentVolumeClaim:
          claimName: sqlite-pvc
