k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rails-app-service
spec:
  type: NodePort
  selector:
    app: rails-app
  ports:
    - port: 80        # This is the port the service will listen on
      targetPort: 3000 # This is the port your app runs on
